<resources>
    <string name="app_name">TODO List</string>
    <string name="title_things_todo">Things ToDo</string>
    <string name="next"><u>next</u></string>
    <string name="sign_up_context_msg">Create profile to start your first ToDo List</string>
    <string name="hint_your_name">your name</string>
    <string name="hint_password">password</string>
    <string name="hint_your_email_address">Your email address</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="login_context_msg">Welcome back!</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="forget_password">Forget your password?</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="view_task">View Task</string>
    <string name="edit">Edit</string>
    <string name="lists_todo">Lists ToDo</string>
    <string name="hint_search">Search</string>
    <string name="lists">Lists :</string>
    <string name="hint_create_new_list_here">Create new list here</string>
    <string name="hint_meet">meet</string>
    <string name="results">Result</string>
    <string name="personal_lists">Personal List</string>
    <string name="hint_create_new_task_here">Create new task here</string>
    <string name="fill_this_field">Fill in this field</string>
    <string name="erorr_failed_login">Wrong username or password</string>
</resources>